--- a/src/Agenda.WebApi/appsettings.Development.json
+++ b/src/Agenda.WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Agenda;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
