feat: add ApiConfig.cs and JwtConfig.cs

--- a/src/Agenda.WebApi/appsettings.json
+++ b/src/Agenda.WebApi/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "MEUSEGREDO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "Agenda",
+    "ValidoEm": "https://localhost"
+  }
 }
