--- a/src/Agenda.WebApi/appsettings.Development.json
+++ b/src/Agenda.WebApi/appsettings.Development.json
@@ -7,5 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Secret": "MEUSEGREDO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "Agenda",
+    "ValidoEm": "https://localhost"
   }
 }
