feat: package Analyzers

--- a/src/Agenda.Data/Agenda.Data.csproj
+++ b/src/Agenda.Data/Agenda.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Agenda.Domain\Agenda.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+
 </Project>
