--- a/src/Agenda.WebApi/Agenda.WebApi.csproj
+++ b/src/Agenda.WebApi/Agenda.WebApi.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.0.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.0.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
@@ -25,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Agenda.Data\Agenda.Data.csproj" />
     <ProjectReference Include="..\Agenda.Domain\Agenda.Domain.csproj" />
+    <ProjectReference Include="..\Agenda.Entities\Agenda.Entities.csproj" />
   </ItemGroup>
 
 </Project>
