feat: add get authenticated user.

--- a/src/Agenda.WebApi/appsettings.json
+++ b/src/Agenda.WebApi/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "UserDefault": {
+    "UserName": "admin",
     "Email": "admin@host.com",
     "Password": "P@ssw0rd"
   },
