--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,29 @@
-name: build and test
-
+name: .NET
+ 
 on:
   push:
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
-    paths:
-    - '**.cs'
-    - '**.csproj'
-
-env:
-  DOTNET_VERSION: '8.0.0' # The .NET SDK version to use
-
+    branches: [ "main" ]
+ 
 jobs:
-  build-and-test:
-
-    name: build-and-test-${{matrix.os}}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
+  build:
+ 
+    runs-on: ubuntu-latest
+ 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET Core
+    
+    - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: Install dependencies
+        dotnet-version: 8.0.x
+        
+    - name: Restore dependencies
       run: dotnet restore
       
     - name: Build
-      run: dotnet build --configuration Release --no-restore
-    
+      run: dotnet build --no-restore
+      
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-build --verbosity normal
