--- a/src/Agenda.WebApi/appsettings.json
+++ b/src/Agenda.WebApi/appsettings.json
@@ -19,5 +19,10 @@
     "ExpiracaoHoras": 2,
     "Emissor": "Agenda",
     "ValidoEm": "https://localhost"
+  },
+  "Twilio": {
+    "AccountSID": "",
+    "AuthToken": "",
+    "SMSSernderNumber": ""
   }
 }
