--- a/src/Agenda.Domain/Agenda.Domain.csproj
+++ b/src/Agenda.Domain/Agenda.Domain.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Twilio" Version="6.18.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Agenda.Data\Agenda.Data.csproj" />
+    <ProjectReference Include="..\Agenda.Shared\Agenda.Shared.csproj" />
   </ItemGroup>
 
 </Project>
