--- a/src/Agenda.Shared/Agenda.Shared.csproj
+++ b/src/Agenda.Shared/Agenda.Shared.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Agenda.Shared\Agenda.Shared.csproj" />
+    <Folder Include="Utils\" />
   </ItemGroup>
 
 </Project>
