refactor: send verification code.

--- a/src/Agenda.WebApi/appsettings.Development.json
+++ b/src/Agenda.WebApi/appsettings.Development.json
@@ -23,5 +23,9 @@
     "AccountSID": "",
     "AuthToken": "",
     "SMSSernderNumber": ""
+  },
+  "VerificationCode": {
+    "CaracteresLength": 5,
+    "Timer": 120
   }
 }
