--- a/src/Agenda.Tests/Agenda.Tests.csproj
+++ b/src/Agenda.Tests/Agenda.Tests.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\Agenda.Entities\Agenda.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
