--- a/src/Agenda.WebApi/appsettings.json
+++ b/src/Agenda.WebApi/appsettings.json
@@ -24,5 +24,9 @@
     "AccountSID": "",
     "AuthToken": "",
     "SMSSernderNumber": ""
+  },
+  "VerificationCode": {
+    "CaracteresLength": 5,
+    "Timer": 120
   }
 }
