--- a/src/Agenda.WebApp/package.json
+++ b/src/Agenda.WebApp/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.1.1",
     "express": "^4.18.2",
     "ngx-mask": "^17.0.4",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
