--- a/src/Agenda.WebApp/package.json
+++ b/src/Agenda.WebApp/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "ngx-mask": "^17.0.4",
     "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
