--- a/src/Agenda.WebApp/package.json
+++ b/src/Agenda.WebApp/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "ngx-mask": "^17.0.4",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "^17.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
