feat: add send verification code by e-mail.

--- a/src/Agenda.Shared/Agenda.Shared.csproj
+++ b/src/Agenda.Shared/Agenda.Shared.csproj
@@ -7,4 +7,14 @@
     <NoWarn>CS8618</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Templates\Email\VerificationCode.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\Email\VerificationCode.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
