--- a/src/Agenda.WebApi/appsettings.Development.json
+++ b/src/Agenda.WebApi/appsettings.Development.json
@@ -27,5 +27,13 @@
   "VerificationCode": {
     "CaracteresLength": 5,
     "Timer": 120
+  },
+  "Email": {
+    "From": "from@localhost.com",
+    "Host": "localhost",
+    "Login": "",
+    "Senha": "",
+    "Port": 25,
+    "EnableSsl": false
   }
 }
