--- a/src/Agenda.Entities/Agenda.Entities.csproj
+++ b/src/Agenda.Entities/Agenda.Entities.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Agenda.Shared\Agenda.Shared.csproj" />
   </ItemGroup>
 
