--- a/src/Agenda.Domain/Agenda.Domain.csproj
+++ b/src/Agenda.Domain/Agenda.Domain.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.30" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
